[package]
name = "markov-chain-MC"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3.0"
ndarray = "0.16.1"
ndarray-csv = "0.5.2"
plotpy = "1.7.1"
plotters = "0.3"
rand = "0.8.5"
rand_distr = "0.4.3"
npyz = "0.8"
ndarray-npy = "0.9.1"
num = "0.4.3"

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"